Tweak Whisper GPU allocator to avoid HIP OOM
Made-with: Cursor

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       - WHISPER_BEAM_SIZE=1
       - WHISPER_CONDITION_ON_PREVIOUS_TEXT=false
       - WHISPER_TORCH_COMPILE=true
+      - PYTORCH_CUDA_ALLOC_CONF=expandable_segments:True
       - VRAM_THRESHOLD_FREE_MB=1536
       - ROCR_VISIBLE_DEVICES=0
       - HSA_OVERRIDE_GFX_VERSION=11.0.0
